Added gsap scroll triger animation

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@types/gsap": "^3.0.0",
+    "gsap": "^3.10.4",
     "rxjs": "~7.5.0",
     "three": "^0.143.0",
     "tslib": "^2.3.0",
